2015-11-03  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadRawProfile): Issue a warning instead of
	an error when attempting to read a zero-length profile.

2015-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h (MagickSleep): Provide the macro 'MagickSleep'
	to call a function which delays for one second.  No longer provide
	a macro 'sleep' in WIN32 compiles.  Resolves issue reported to
	graphicsmagick-bugs mailing list on 2005-11-01 entitled "MinGW
	build error when sleep re#defined as Sleep".

2015-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/demo/demos.tap: Add zoom test cases to test resize to
	original dimensions, change height, and change width.

	* magick/resize.c (ScaleImage): Fix regression introduced in
	1.3.22 release which results in pixel cache not open if the scale
	width and height match the original.  Patch by Troy Patteson.
	Fixes part of SourceForge bug #323 "ScaleImage() issues in
	v1.3.22".
	(ScaleImage): Fix double free problem when scaled rows equals
	original rows.  This regression was added in the 1.3.22 release
	via changset 080b99bba574.  Based on patch by Troy Patteson.
	Fixes remaining part SourceForge bug #323 "ScaleImage() issues in
	v1.3.22".

2015-10-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Magick++/Image.rst (thumbnail): Paragraph heading fix.
	Resolves SourceForge issue #321 "find tiny error in
	Magick++/Image.html document".

2015-10-06  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* docs/*.imdoc: Changed synopses in manpages to add "gm "
	prefix to commands. Updated synopsis for "convert" to agree
	with what's in the "gm" manpage.

2015-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Remove CFLAGS and LDFLAGS deduplication code.
	Resolves SourceForge bug #320 OS X "universal build failure".

2015-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Updated for 1.3.22 release.
