@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020151101"
-#define public MagickPackageReleaseDate "snapshot-20151101"
+#define public MagickPackageVersionAddendum ".020151104"
+#define public MagickPackageReleaseDate "snapshot-20151104"
