@@ -35,6 +35,23 @@
 <div class="document">
 
 
+<p>2015-11-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>configure.ac: Add checks for 'ps2write' and 'eps2write' as
+Ghostscript Postscript and Encapsulated Postscript
+writers. Resolves issue reported to graphicsmagick-bugs mailing
+list on 2015-11-01 entitled &quot;Failure to detect pswrite and
+epswrite Ghostscript devices&quot;.</li>
+</ul>
+</blockquote>
+<p>2015-11-03  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/png.c (ReadRawProfile): Issue a warning instead of
+an error when attempting to read a zero-length profile.</li>
+</ul>
+</blockquote>
 <p>2015-11-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
